--- a/cell02/ex03/card.css
+++ b/cell02/ex03/card.css
@@ -8,7 +8,7 @@ body {
     background-color: white;
     margin: 50px auto;
     text-align: center;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 h2 {
